[gd_scene load_steps=2 format=3 uid="uid://cvrhgarjbistk"]

[ext_resource type="Script" path="res://Tile.gd" id="1_2bu8e"]

[node name="Tile" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 220.0
offset_top = 220.0
offset_right = 220.0
offset_bottom = 220.0
script = ExtResource("1_2bu8e")

[node name="TileColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.266667, 0.270588, 1)

[connection signal="mouse_entered" from="TileColor" to="." method="_on_tile_color_mouse_entered"]
[connection signal="mouse_exited" from="TileColor" to="." method="_on_tile_color_mouse_exited"]
